send new archives for github

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,10 +1,10 @@
 <p>
-  <strong>Titulo:</strong>
+  <strong>Title:</strong>
   <%= @article.title %>
 </p>
 
 <p>
-  <strong>Texto:</strong>
+  <strong>Text:</strong>
   <%= @article.text %>
 </p>
 
