inserindo textos em portugues e adicionando item comentarios

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -14,15 +14,15 @@
   <% end %>
 
   <p>
-    <%= f.label :title %><br>
+    <b><%= f.label :título %></b><br>
     <%= f.text_field :title %>
   </p>
   <p>
-    <%= f.label :text %><br>
+    <b><%= f.label :texto %></b><br>
     <%= f.text_area :text %>
   </p>
   <p>
-    <%= f.submit %>
+    <%= f.submit "Envie seu artigo"%>
   </p>
 <% end %>
 
