--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit article</h1>
+<h1>Edite o artigo</h1>
 <%= render 'form' %>
 
-<%=link_to 'Back', articles_path %>
+<%=link_to 'Lista de artigos', articles_path %>
