--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,11 +1,11 @@
-<h1>Listing Articles</h1>
+<h1>Lista de Artigos</h1>
 
-<%=link_to 'New article', new_article_path %>
+<%=link_to 'Novo artigo', new_article_path %>
 
 <table>
   <tr>
-    <th>Title</th>
-    <th>Text</th>
+    <th>Título</th>
+    <th>Texto</th>
     <th colspan="3"></th>
   </tr>
 
@@ -13,11 +13,11 @@
     <tr>
       <td><%= article.title %></td>
       <td><%= article.text %></td>
-      <td><%= link_to 'Show', article_path(article) %></td>
-      <td><%= link_to 'Edit', edit_article_path(article) %></td>
-      <td><%= link_to 'Destroy', article_path(article),
+      <td><%= link_to 'Abra', article_path(article) %></td>
+      <td><%= link_to 'Edite', edit_article_path(article) %></td>
+      <td><%= link_to 'Exclua', article_path(article),
               method: :delete,
-              data: { confirm: 'Are you sure?' } %></td>
+              data: { confirm: 'Você tem certeza disso?' } %></td>
     </tr>
   <% end %>
 </table>
