--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New article</h1>
+<h1>Novo artigo</h1>
 <%= render 'form' %>
 
-<%=link_to 'Back', articles_path %>
+<%=link_to 'Lista de artigos', articles_path %>
