--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,12 +1,31 @@
 <p>
-  <strong>Title:</strong>
+  <strong>Título:</strong>
   <%= @article.title %>
 </p>
 
 <p>
-  <strong>Text:</strong>
+  <strong>Texto:</strong>
   <%= @article.text %>
 </p>
 
-<%= link_to 'Edit', edit_article_path(@article) %> |
+<h2>Comentários</h2>
+<%= render @article.comments %>
+
+
+<h2> Adicione um comentário</h2>
+<%= form_for([@article, @article.comments.build]) do |f| %>
+  <p>
+    <b><%= f.label :Comentarista %></b><br>
+    <%= f.text_field :commenter %>
+  </p>
+  <p>
+    <b><%= f.label :Comentário %></b><br>
+    <%= f.text_area :body %>
+  </p>
+  <p>
+    <%= f.submit "Envie seu comentário"%>
+  </p>
+<% end %>
+
+<%= link_to 'Edite', edit_article_path(@article) %> |
 <% link_to 'Back', articles_path %>
