--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,9 @@
-<h1>Lista de Artigos</h1>
+<h1 class="text1">Lista de Artigos</h1>
 
-<%=link_to 'Novo artigo', new_article_path %>
+<b><%=link_to 'Novo artigo', new_article_path %></b>
 
-<table>
-  <tr>
+<table class="table1">
+  <tr class="tr1">
     <th>Título</th>
     <th>Texto</th>
     <th colspan="3"></th>
@@ -11,11 +11,11 @@
 
   <% @articles.each do |article| %>
     <tr>
-      <td><%= article.title %></td>
-      <td><%= article.text %></td>
-      <td><%= link_to 'Abra', article_path(article) %></td>
-      <td><%= link_to 'Edite', edit_article_path(article) %></td>
-      <td><%= link_to 'Exclua', article_path(article),
+      <td class="td4"><%= article.title %></td>
+      <td class="td4"><%= article.text %></td>
+      <td class="td2"><%= link_to 'Abra', article_path(article) %></td>
+      <td class="td2"><%= link_to 'Edite', edit_article_path(article) %></td>
+      <td class="td2"><%= link_to 'Exclua', article_path(article),
               method: :delete,
               data: { confirm: 'Você tem certeza disso?' } %></td>
     </tr>
